--- a/src/pages/common/header.html
+++ b/src/pages/common/header.html
@@ -8,31 +8,34 @@
                 <li>
                     <a href="javascript:" id="head-myCard">
                         <span><i class="ic-pubfont ic-tpcard"></i></span>
-                        <p>我的名片</p>
+                        <p data-i18n="header.myCard"></p>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:" id="head-soqi">
                         <span><i class="ic-pubfont ic-tpsoqi"></i></span>
-                        <p>管理中心</p>
+                        <p data-i18n="header.manageCenter"></p>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:" class="j-message" id="head-msg">
                     <span>
+                        <b class="pub-buttle">3</b>
                         <i class="ic-pubfont ic-tpnews"></i>
                     </span>
-                        <p>消息</p>
+                        <p data-i18n="header.msg"></p>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:"  id="head-exit">
                         <span><i class="ic-pubfont ic-tpquit"></i></span>
-                        <p>退出</p>
+                        <p data-i18n="header.logout"></p>
                     </a>
                 </li>
             </ul>
         </div>
+        <div  id="pop-areaboxMask"></div>
+        <!-- <div class="pub-popmaskbg" id="pop-areaboxMask"></div> -->
     </header>
     
     
